--- a/app/assets/stylesheets/song_page.scss
+++ b/app/assets/stylesheets/song_page.scss
@@ -13,6 +13,7 @@
 .song-page-content {
   height: 900px;
   width: 100%;
+  display: flex;
   // max-width: 1240px;
   // min-width: 900px;
 }
@@ -107,6 +108,10 @@
   width: 70%;
   border-right: 1px solid rgba(224, 223, 223, 0.3);
   padding: 0 30px;
+}
+
+.song-page-right {
+  width: 30%;
 }
 
 .comment-form-container {
